<resources>
    <string name="app_name">PalindromeChecker</string>

    <string name="main_title">Check if a word is a palindrome</string>

    <string name="palindrome_indicator_true">True</string>
    <string name="palindrome_indicator_false">False</string>
    <string name="palindrome_true"> is a Palindrome.</string>
    <string name="palindrome_false"> is not a Palindrome.</string>

    <string name="enter_button">Enter</string>
    <string name="edittext_word_hint">Enter a word</string>
    <string name="textview_history">Word History</string>
    <string name="textview_result">Ready</string>

    <!-- Test information for UI test -->
    <string name="item_text_placeholder">Test String</string>
    <string name="item_binary_placeholder">0||1</string>
</resources>
