<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.htdwps.palindromechecker.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/textview_title_header"
        android:text="@string/main_title"/>

    <EditText
        android:id="@+id/user_input"
        style="@style/edittext_user_input"
        android:hint="@string/edittext_word_hint"
        android:inputType="text"
        android:maxLength="50"/>

    <TextView
        android:id="@+id/textview_result"
        style="@style/textview_result_view"
        android:text="@string/textview_result"/>

    <TextView
        style="@style/textview_history_header"
        android:text="@string/textview_history"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_old_words"
        style="@style/recyclerview_list"/>

    <Button
        android:id="@+id/submit_button"
        style="@style/button_submit_input"
        android:text="@string/enter_button"
        android:textColor="@android:color/white"/>

</LinearLayout>
